--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container" style="background-color:pink; padding:20px; margin-top:0px; padding-top:40px; padding-bottom:300px;">
+    <div class="container" style="background-image: https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwis0LCyn7viAhURkxQKHSiRA-wQjRx6BAgBEAU&url=https%3A%2F%2Fwww.lucidchart.com%2Fblog%2F3-keys-to-pitch-an-idea-successfully&psig=AOvVaw31h2vl0dPIFszKt10Z7_MN&ust=1559030490340193; padding:20px; margin-top:0px; padding-top:40px; padding-bottom:300px;">
         <div class="row" style="text-align:center; font-size:30px;">
             <span style="font-size:40px; font-family: 'Akronim', cursive;">A Minute Pitch</span>
         </div>
