--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,12 +19,12 @@
                     <br>
                     <a href="{{url_for('main.business')}}" style="font-family: 'Joti One', cursive; font-size:20px;">
                         <br>
-                            
+                         BUSINESS PITCHES   
                     </a>
                     <br>
                     <a href="{{url_for('main.promotion')}}" style="font-family: 'Joti One', cursive; font-size:20px;">
                         <br>
-                        Promotion Pitches
+                        
                     </a>
                     <br>
                     <a href="{{url_for('main.interview')}}" style="font-family: 'Joti One', cursive; font-size:20px;">
