--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,7 +24,7 @@
                     <br>
                     <a href="{{url_for('main.promotion')}}" style="font-family: 'Joti One', cursive; font-size:20px;">
                         <br>
-                        
+                        PROMOTION PITCHES
                     </a>
                     <br>
                     <a href="{{url_for('main.interview')}}" style="font-family: 'Joti One', cursive; font-size:20px;">
