--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,7 +29,7 @@
                     <br>
                     <a href="{{url_for('main.interview')}}" style="font-family: 'Joti One', cursive; font-size:20px;">
                         <br>
-                        
+                        INTERVIEW PITCHES
                     </a>
                     <br>
                     <a href="{{url_for('main.product')}}" style="font-family: 'Joti One', cursive; font-size:20px;">
