--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,7 +34,7 @@
                     <br>
                     <a href="{{url_for('main.product')}}" style="font-family: 'Joti One', cursive; font-size:20px;">
                         <br>
-                        
+                        PRODUCT PITCHES
                     </a>
                     <br>
         </div>
