--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -55,7 +55,7 @@
         </div>
     </hr>
         <div class="all-pitches">
-            <span style="color:gainsboro;">All pitches are displayed </span>
+            <span style="color:greenyellow;">All pitches are displayed </span>
                 <hr>
                 {{macro.displayPitches(pitches)}}
 
