--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
 {% block content %}
     <div class="container"
         <div class="row" style="text-align:center; font-size:30px;">
-            <span style="font-size:50px; font-family: 'bold', cursive;">GIVE US YOUR IDEA</span>
+            <span style="font-size:50px; font-family: 'bold', cursive;">PITCH YOUR IDEAS</span>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                     <a href="{{url_for('main.technology')}}" style="font-family: 'Joti One', cursive; font-size:20px;">
