--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,8 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container"
+    <div class="container" style="background-color : rgb(228, 210, 213) "
+
         <div class="row" style="text-align:center; font-size:30px;">
             <span style="font-size:50px; font-family: 'bold', cursive;">PITCH YOUR IDEAS</span>
         </div>
