--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -56,7 +56,7 @@
         </div>
     </hr>
         <div class="all-pitches">
-            <span style="color:greenyellow;">GIVE GREAT IDEAS SAVE THE WORLD !!! </span>
+            <span style="color:greenyellow; font: size 50px;">GIVE GREAT IDEAS SAVE THE WORLD !!! </span>
                 <hr>
                 {{macro.displayPitches(pitches)}}
 
