redeployment to heroku

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-9">
             <div class="panel style="style="border: 3px solid #f2f2f2; padding:20px; margin-top:10px;">
-                <p style="font-family: 'Bellefair', serif; font-size:30px;">ADD YOUR PICH IN ANY CARTEGORY</p>
+                <p style="font-family: 'Bellefair', serif; font-size:30px;">ADD YOUR PITCH IN ANY CATEGORY</p>
 
                 <div style="text-align:center;">
                     <a href="{{url_for('main.new_pitch')}}">
@@ -56,7 +56,7 @@
         </div>
     </hr>
         <div class="all-pitches">
-            <span style="color:greenyellow; font: size 50px;">GIVE GREAT IDEAS SAVE THE WORLD !!! </span>
+            <span style="color:greenyellow; font-size: 30px;">“When we are selling our ideas, the audience must first buy us.” - peter coughter</span>
                 <hr>
                 {{macro.displayPitches(pitches)}}
 
